<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/etFirstNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:hint="@string/survey_first_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/etSecondNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/survey_second_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstWord" />

    <EditText
        android:id="@+id/etFirstWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/survey_first_text"
        app:layout_constraintStart_toStartOf="@+id/etFirstNumber"
        app:layout_constraintTop_toBottomOf="@+id/etFirstNumber" />

    <EditText
        android:id="@+id/etSecondWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/survey_second_text"
        app:layout_constraintStart_toStartOf="@+id/etSecondNumber"
        app:layout_constraintTop_toBottomOf="@+id/etSecondNumber" />



    <EditText
        android:id="@+id/etLimite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/survey_limit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSecondWord" />

    <Button
        android:id="@+id/process_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_validate_text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLimite" />

</androidx.constraintlayout.widget.ConstraintLayout>